--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "Backend for Salon E-Commerce Platform",
     "main": "src/server.js",
+    "type": "module",
     "scripts": {
         "start": "node src/server.js",
         "dev": "nodemon src/server.js"
