--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
 PORT=5000
-MONGO_URI=
-JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
+
+# DB
+MONGO_URI=
+
+# JWT
+JWT_SECRET=your_jwt_secret_key_here
+
+# cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
