--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^7.0.0",
-        "mongoose": "^8.0.3"
+        "mongoose": "^8.0.3",
+        "razorpay": "^2.9.6"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
